--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -19665,7 +19665,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00, 12336.19it/s]\n",
+      " 20%|██        | 2/10 [00:00<00:00, 578.29it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "def foo_():\n",
+    "    time.sleep(0.3)\n",
+    "range_ = range(0, 10)\n",
+    "total = len(range_)\n",
+    "\n",
+    "with tqdm(total=total, position=0, leave=True) as pbar:\n",
+    "   for i in tqdm((foo_, range_ ), position=0, leave=True):\n",
+    "    pbar.update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "494ec756",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download progress: 9%   \r"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "for i in range(10):\n",
+    "    sys.stdout.write(\"Download progress: %d%%   \\r\" % (i) )\n",
+    "    sys.stdout.flush()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "788f10e3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -19687,7 +19738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
